gcc/testsuite/algol60.dg/fail/internals1.a60
'comment' { dg-do compile } ;
'begin'
 'boolean' c;
 c := abs ('true'); 'comment' { dg-error "type mismatch" } ;
'end';
